deployments/k8s/app.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
  - name: "app"
    image: ivanandraschko/automation:latest
    tty: true
  - name: golang
    image: golang:1.22
    tty: true
