deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - testing.com
  rules:
    - host: testing.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jenkins-service-bridge
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-bridge
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: jenkins-service.devops-tools
